--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+    <!-- Logo -->
+    <a
+      href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
+      >WEBSTUDIO</a
+    >
+    <!-- menu -->
+    <nav>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
+    </nav>
+    <!-- contacts -->
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+  </head>
+
+  <body>
+    <!-- hero image  -->
     
-</body>
+  </body>
 </html>
