--- a/index.html
+++ b/index.html
@@ -1,29 +1,68 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <!-- Logo -->
-    <a
-      href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
-      >WEBSTUDIO</a
-    >
-    <!-- menu -->
-    <nav>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
-      </ul>
-    </nav>
-    <!-- contacts -->
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
   </head>
 
   <body>
-    <!-- hero image  -->
-    
+    <header>
+      <!-- Logo -->
+      <a
+        href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
+        >WEBSTUDIO</a
+      >
+      <!-- menu -->
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <!-- contacts -->
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+      <!-- hero image  -->
+      <h1>
+        Effective Solutions <br />
+        for Your Business
+      </h1>
+      <button type="button">Order Service</button>
+      <!-- Section 1 -->
+      <section>
+        <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+        <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      </section>
+      <!-- Section 2 -->
+      <section>
+        <h2>What Are We Doing?</h2>
+      </section>
+      <!-- Section 3 -->
+      <section>
+        <h2>Our Team</h2>
+      </section>
+    </main>
+
+    <footer>
+      <a
+        href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
+        >WEBSTUDIO</a
+      >
+      <p>
+        Increase the flow of customers and <br>
+        sales for your business with digital <br>
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
