--- a/index.html
+++ b/index.html
@@ -34,22 +34,55 @@
       <button type="button">Order Service</button>
       <!-- Section 1 -->
       <section>
-        <h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-        <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- Section 2 -->
       <section>
         <h2>What Are We Doing?</h2>
+        <ul>
+            <li><img src="./images/section2/web-version.jpg" alt="Modern Websites" width="360" height="300"></li>
+            <li><img src="./images/section2/chats.jpg" alt="User-friendly Messengers" width="360" height="300"></li>
+            <li><img src="./images/section2/mobile-app.jpg" alt="Mobile Apps" width="360" height="300"></li>
+        </ul>
       </section>
       <!-- Section 3 -->
       <section>
         <h2>Our Team</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
       </section>
     </main>
 
@@ -59,8 +92,8 @@
         >WEBSTUDIO</a
       >
       <p>
-        Increase the flow of customers and <br>
-        sales for your business with digital <br>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
