--- a/index.html
+++ b/index.html
@@ -69,19 +69,76 @@
       <section>
         <h2>What Are We Doing?</h2>
         <ul>
-            <li><img src="./images/section2/web-version.jpg" alt="Modern Websites" width="360" height="300"></li>
-            <li><img src="./images/section2/chats.jpg" alt="User-friendly Messengers" width="360" height="300"></li>
-            <li><img src="./images/section2/mobile-app.jpg" alt="Mobile Apps" width="360" height="300"></li>
+          <li>
+            <img
+              src="./images/section2/web-version.jpg"
+              alt="Modern Websites"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section2/chats.jpg"
+              alt="User-friendly Messengers"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section2/mobile-app.jpg"
+              alt="Mobile Apps"
+              width="360"
+              height="300"
+            />
+          </li>
         </ul>
       </section>
       <!-- Section 3 -->
       <section>
         <h2>Our Team</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <li>
+            <img
+              src="./images/section3/mark.jpg"
+              alt="A man with a beard"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/tom.jpg"
+              alt="Laughing man"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/camila.jpg"
+              alt="Confident woman"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/daniel.jpg"
+              alt="Smiling man"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
