--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 
   <body>
     <header>
-      <!-- Logo -->
-      <a
-        href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
-        >WEBSTUDIO</a
-      >
-      <!-- menu -->
       <nav>
+        <!-- Logo -->
+        <a href="./index.html">WebStudio</a>
+        <!-- menu -->
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -22,16 +19,20 @@
         </ul>
       </nav>
       <!-- contacts -->
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </address>
     </header>
     <main>
-      <!-- hero image  -->
-      <h1>
-        Effective Solutions <br />
-        for Your Business
-      </h1>
-      <button type="button">Order Service</button>
+      <section>
+        <!-- hero image  -->
+        <h1>
+          Effective Solutions
+          for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+      </section>
       <!-- Section 1 -->
       <section>
         <ul>
@@ -144,13 +145,9 @@
     </main>
 
     <footer>
-      <a
-        href="https://www.figma.com/file/Kr5Q4EVrEAqpOWko4QeEJb/Web-Studio-(Version-4.0)?type=design&node-id=0-1&mode=design&t=JQfwphNzhPYTke9T-0"
-        >WEBSTUDIO</a
-      >
+      <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
