--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <section>
         <ul>
           <li>
+            <h2>Our pillars</h2>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
@@ -68,7 +69,7 @@
       </section>
       <!-- Section 2 -->
       <section>
-        <h2>What Are We Doing?</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
