--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
       </nav>
       <!-- contacts -->
       <address>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
+        </li>
       </address>
     </header>
     <main>
       <section>
         <!-- hero image  -->
-        <h1>
-          Effective Solutions
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- Section 1 -->
       <section>
+        <h2>Our pillars</h2>
         <ul>
           <li>
-            <h2>Our pillars</h2>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
